@@ -12,23 +12,23 @@ print 'Test # %d' % ntest
 
 ##-----------------------------
 
-dsname, src                  = 'exp=cxif5315:run=169', psana.Source('DetInfo(CxiDs2.0:Cspad.0)')
-if   ntest==2  : dsname, src = 'exp=meca1113:run=376', psana.Source('DetInfo(MecTargetChamber.0:Cspad2x2.1)')
-elif ntest==3  : dsname, src = 'exp=amob5114:run=403', psana.Source('DetInfo(Camp.0:pnCCD.0)')
-elif ntest==4  : dsname, src = 'exp=xppi0614:run=74',  psana.Source('DetInfo(NoDetector.0:Epix100a.0)')
-elif ntest==5  : dsname, src = 'exp=sxrg3715:run=46',  psana.Source('DetInfo(SxrEndstation.0:Andor.2)')
-elif ntest==6  : dsname, src = 'exp=sxrf9414:run=72',  psana.Source('DetInfo(SxrEndstation.0:Fccd960.0)')
-elif ntest==7  : dsname, src = 'exp=xcsi0112:run=15',  psana.Source('DetInfo(XcsBeamline.0:Princeton.0)')
-elif ntest==8  : dsname, src = 'exp=amo42112:run=120', psana.Source('DetInfo(AmoBPS.0:Opal1000.0)')
-elif ntest==9  : dsname, src = 'exp=cxib2313:run=46',  psana.Source('DetInfo(CxiDg2.0:Tm6740.0)')
-elif ntest==10 : dsname, src = 'exp=amo86615:run=4',   psana.Source('DetInfo(Camp.0:pnCCD.0)')
-elif ntest==11 : dsname, src = 'exp=cxif5315:run=169', psana.Source('CxiDs2.0:Cspad.0') # NO Detinfo
-elif ntest==12 : dsname, src = 'exp=cxif5315:run=169', psana.Source('DsaCsPad')  # alias
+dsname, src                  = 'exp=cxif5315:run=169', 'CxiDs2.0:Cspad.0'
+if   ntest==2  : dsname, src = 'exp=meca1113:run=376', 'MecTargetChamber.0:Cspad2x2.1'
+elif ntest==3  : dsname, src = 'exp=amob5114:run=403', 'Camp.0:pnCCD.0'
+elif ntest==4  : dsname, src = 'exp=xppi0614:run=74',  'NoDetector.0:Epix100a.0'
+elif ntest==5  : dsname, src = 'exp=sxrg3715:run=46',  'SxrEndstation.0:Andor.2'
+elif ntest==6  : dsname, src = 'exp=sxrf9414:run=72',  'SxrEndstation.0:Fccd960.0'
+elif ntest==7  : dsname, src = 'exp=xcsi0112:run=15',  'XcsBeamline.0:Princeton.0'
+elif ntest==8  : dsname, src = 'exp=amo42112:run=120', 'AmoBPS.0:Opal1000.0'
+elif ntest==9  : dsname, src = 'exp=cxib2313:run=46',  'CxiDg2.0:Tm6740.0'
+elif ntest==10 : dsname, src = 'exp=amo86615:run=4',   'Camp.0:pnCCD.0'
+elif ntest==11 : dsname, src = 'exp=cxif5315:run=169', 'CxiDs2.0:Cspad.0' # NO Detinfo
+elif ntest==12 : dsname, src = 'exp=cxif5315:run=169', 'DsaCsPad'  # alias
 elif ntest==13 : dsname, src = 'exp=cxif5315:run=169', 'CxiDs2.0:Cspad.0' # string
 elif ntest==14 : dsname, src = 'exp=cxif5315:run=169', 'DsaCsPad' # string of alias
-elif ntest==15 : dsname, src = 'exp=cxii8715:run=14',  psana.Source('DetInfo(CxiEndstation.0:Quartz4A150.0)') # alias='Sc1Questar'
-elif ntest==16 : dsname, src = 'exp=xppc0115:run=305', psana.Source('DetInfo(XppEndstation.0:Rayonix.0)') # alias='rayonix'
-elif ntest==17 : dsname, src = 'exp=amoj5415:run=49',  psana.Source('pnccdFront')
+elif ntest==15 : dsname, src = 'exp=cxii8715:run=14',  'CxiEndstation.0:Quartz4A150.0' # alias='Sc1Questar'
+elif ntest==16 : dsname, src = 'exp=xppc0115:run=305', 'XppEndstation.0:Rayonix.0' # alias='rayonix'
+elif ntest==17 : dsname, src = 'exp=amoj5415:run=49',  'pnccdFront'
 
 print 'Example for\n  dataset: %s\n  source : %s' % (dsname, src)
 
@@ -46,7 +46,7 @@ for key in evt.keys() : print key
 ##-----------------------------
 
 par = nrun # evt or nrun
-det = psana.Detector(src, env, pbits=0, iface='P') # iface='P' or 'C'
+det = psana.Detector(src, env)
 
 ins = det.instrument()
 print 80*'_', '\nInstrument: ', ins
