@@ -5,71 +5,64 @@
 # Description:
 #  class PyDetector
 #--------------------------------------------------------------------------
-""" Class contains factory method create(...), returning instance of different detector data accessor 
-    Method create(...) switches between classes depending on detector type defined from source.
-    Currently implemented detector data access classes:
-    \n :py:class:`Detector.AreaDetector` - access to area detector data
-    \n :py:class:`Detector.WFDetector`  - access to waveform detector data
-
-Usage::
-
-    # !!! NOTE: None is returned whenever requested information is missing.
-
-    # import
-    import psana
-    from Detector.PyDetector import PyDetector    
-
-    # retreive parameters from psana etc.
-    # source can be retreived from its full name
-    src = psana.Source('DetInfo(CxiDs2.0:Cspad.0)')
-
-    # or source contracted name
-    src = psana.Source('CxiDs2.0:Cspad.0')
-
-    # or source alias
-    src = psana.Source('DsaCsPad')
-
-    # dataset is specified by the experiment and run number
-    ds  = psana.DataSource('exp=cxif5315:run=169')
-    # extra parameters can be used to switch between data acess modes, ex.: ':idx', ':smd', etc.
-
-    env = ds.env()
-    evt = ds.events().next()
-    runnum = evt.run()
-
-    # parameret par can be either runnum or evt    
-    par = runnum
-    # or
-    par = evt
-
-    # create object using direct import:
-    det = PyDetector(src, env, pbits=0)
-
-    # or via psana namespace:
-    det = psana.PyDetector(src, env, pbits=0)
-
-    # Then use DETECTOR-SPECIFIC!!! methods defined in relevant class AreaDetector or WFDetector, for example 
-    # AreaDetector has methods:
-    nda = det.pedestals(par)
-    ix, iy = det.indexes_xy(par)
-    coords_x = det.coords_x(par)
-    nda = det.raw(par)
-    nda = det.calib(par)
-    img = det.image(evt, nda)
-    ...
-
-    # WFDetector has methods:
-    nda = det.raw(par)
-    wf = det.waveform(par)
-    wt = det.wftime(par)
-    ...
-
+""" 
 This software was developed for the LCLS project.
 If you use all or part of it, please give an appropriate acknowledgment.
 
-@version $Id$
+----------------------------------------
 
-@author Mikhail S. Dubrovin
+Notes on progress 11/9 TJL & CPO
+-- BLD returns DDL detector, some discussion if this should be
+   easier to access.
+
+Notes on progress 11/2 TJL & CPO
+-- We settled on a source-matching pattern by eliminating support for
+   psana.Source in the Detector interface and adopting Mikhail's
+   matching system
+-- For next time: start with BLD
+-- We are going to implement Detector classes for
+   > BLD
+   > EPICS
+-- Should EPICS be one detector, or should there be one detector
+   per EPICS PV?
+     > Pros of 1 per PV: seamless for user (no knowledge of EPCIS)
+     > Pros of 1 detector: better performance for tab completes
+
+
+Notes on progress 10/20 TJL & CPO
+-- Major outstanding problem is figuring out how to map Source names to their 
+   corresponding Detector class implementations
+-- We are going to implement Detector classes for
+   > BLD
+   > EPICS
+   > EVR (in progress)
+-- All ToDo's below still outstanding
+
+
+Notes on progress 10/14
+
+To Do:
+-- rename Detector.Pydetector to AreaDetector
+
+(factory)
+-- Fix matching of source objects so it works nicely
+   (leaning towards strings, alt option is to reveal
+    detector/device ID numbers in C++, one route
+    is to cp the Event.keys() transfer of the DetInfo
+    object from C++ to Python)
+-- write smart DetInfo/BldInfo/EPICS matching code that
+   takes a string and finds out which one to use, we
+   can distinguish between DetInfo and BldInfo by the
+   number of fields the user pases in their string
+
+To Think About:
+-- How should tab completion work (heirarchies, and how does this 
+   dictate restraints on the Detector interface implementation?
+-- Should EPICS be one detector, or should there be one detector
+   per EPICS PV?
+     > Pros of 1 per PV: seamless for user (no knowledge of EPCIS)
+     > Pros of 1 detector: better performance for tab completes
+
 """
 #------------------------------
 __version__ = "$Revision$"
@@ -77,82 +70,86 @@ __version__ = "$Revision$"
 
 import _psana
 import PSCalib.GlobalUtils as gu
-from Detector.AreaDetector import AreaDetector
-from Detector.WFDetector import WFDetector
 
-##-----------------------------
+from Detector.DdlDetector   import DdlDetector
+from Detector.EpicsDetector import EpicsDetector
+from Detector.AreaDetector  import AreaDetector
+from Detector.WFDetector    import WFDetector
+from Detector.EvrDetector   import EvrDetector
 
-class DetectorFactory :
-    """Python access to detector data.
+# the following function is renamed psana.Detector in the
+# psana __init__.py file
 
-    @see :py:class:`Detector.AreaDetector` - access to area detector data
-    @see :py:class:`Detector.WFDetector` - access to waveform detector data
+def detector_factory(source_string, env):
     """
+    Create a python Detector from a string identifier.
+
+    Parameters
+    ----------
+    source_string : str
+        A string identifing a peice of data to access, examples include:
+          > 'cspad'              # a DAQ alias for a CSPAD camera
+          > 'XppGon.0:Cspad.0'   # a DAQ source string
+          > 'evr0'               # the EVR event code read out
+          > 'EBeam'              # a BldInfo identifier
+        The idea is that you should be able to pass something that makes
+        sense to you as a human here, and you automatically get the right
+        detector object in return.
+
+    env : psana.Env
+        The psana environment object associated with the psana.DataSource
+        you are interested in.
+
+    Returns
+    -------
+    detector : Detector.PyDetector
+        A psana-python detector object. Try detector(psana.Event) to
+        access your data.
+    """
+
+    # check to see if the source_string is in the Bld, which is a
+    # reserved set of names
+    if source_string in gu.bld_names:
+        # make a DDL detector and return it
+        return DdlDetector( 'BldInfo(' + source_string + ')' )
+
+
+    # see if the source_string is an epics PV name
+    epics = env.epicsStore()
+    if source_string in epics.names(): # both names & aliases
+        return EpicsDetector(source_string, env)
+
+
+    # check to see if it is an alias
+    amap = env.aliasMap()
+    alias_src = amap.src(source_string) # string --> DAQ-style psana.Src
+                
+    # if it is an alias, look up the full name
+    if amap.alias(alias_src) != '':         # alias found
+        source_string = str(alias_src)
+
+
+    # map detector names to their respective detector class implementations
+    dettype = gu.det_type_from_source(source_string)
+
+    if dettype == gu.ACQIRIS or dettype == gu.IMP:
+        return WFDetector(source_string, env)
+    elif dettype == gu.EVR:
+        return EvrDetector(source_string, env)
+    elif dettype in [gu.CSPAD, gu.CSPAD2X2, gu.PRINCETON, gu.PNCCD,
+                     gu.TM6740, gu.OPAL1000, gu.OPAL2000, gu.OPAL4000, gu.OPAL8000,
+                     gu.ORCAFL40, gu.EPIX, gu.EPIX10K, gu.EPIX100A, gu.FCCD960,
+                     gu.ANDOR, gu.QUARTZ4A150, gu.RAYONIX]:
+        return AreaDetector(source_string, env)
+
+    else:
+        raise ValueError('Could not interpret "%s" as any known detector' % source_string)
+    
+    return
+
 ##-----------------------------
 
-    def __init__(self) :
-        """Constructor
-        """
-        #print 'c-tor %s - make empty object' % self.__class__.__name__
-        pass
-
-##-----------------------------
-
-    def create(self, src, env, pbits=0, iface='P') :
-        """Returns instance of the class selected by dettype defined from src.
-        @param src    - data source, ex: _psana.Source('DetInfo(CxiDs2.0:Cspad.0)')
-        @param env    - environment, ex: env=ds.env(), where ds=_psana.DataSource('exp=cxif5315:run=169')
-        @param pbits  - print control bit-word, ex: pbits=255 (for test purpose)
-        @param iface  - preferable interface: 'C' - C++ or 'P' - Python based (for test purpose)
-        """
-        self.env = env
-        self.pbits = pbits
-
-        self._set_source(src, set_sub=False)
-        self.dettype = gu.det_type_from_source(self.source)
-
-        if self.pbits & 256 : print 'Initialization for %s' % gu.dic_det_type_to_name[self.dettype]
-
-        if self.dettype == gu.ACQIRIS \
-        or self.dettype == gu.IMP :
-            return WFDetector(src, env, pbits, iface)
-
-        else :
-            return AreaDetector(src, env, pbits, iface)
-
-##-----------------------------
-
-    def _set_source(self, srcpar, set_sub=True) :
-        """Accepts regular source or alias
-        """
-        #print 'type of srcpar: ', type(srcpar)
-        
-        src = srcpar if isinstance(srcpar, _psana.Source) else _psana.Source(srcpar)
-        str_src = gu.string_from_source(src)
-
-        # in case of alias convert it to _psana.Src
-        amap = self.env.aliasMap()
-        psasrc = amap.src(str_src)
-        self.source  = src if amap.alias(psasrc) == '' else amap.src(str_src)
-
-        if not isinstance(self.source, _psana.Source) : self.source = _psana.Source(self.source)
-
-        if self.pbits & 16 :
-            print '%s: input source: %s' % (self.__class__.__name__, src),\
-                  '\n  string source: %s' % (str_src),\
-                  '\n  source object: %s of type: %s' % (self.source, type(self.source))
-
-        #if set_sub :
-        #    self.pyda.set_source(self.source)
-        #    self.da.set_source(self.source)
-
-##-----------------------------
-
-PyDetector = DetectorFactory().create
-
-##-----------------------------
-
-if __name__ == "__main__" :
+def test1():
 
     import sys
     from time import time
@@ -177,7 +174,7 @@ if __name__ == "__main__" :
 
     for key in evt.keys() : print key
 
-    det = PyDetector(src, env, pbits=0)
+    det = detector_factory(src, env)
 
     try :
         nda = det.pedestals(rnum)
@@ -196,4 +193,36 @@ if __name__ == "__main__" :
 
     sys.exit ('Self test is done')
 
-##-----------------------------
+
+def test2():
+    # test EVR names
+    import psana
+
+    #ds = psana.DataSource('exp=amoj5415:run=43')
+    ds = psana.DataSource('exp=xpptut15:run=54')
+    env = ds.env()
+
+    names = ['cspad',
+             'XppGon.0:Cspad.0',
+             'evr0',
+             'NoDetector.0:Evr.0',
+             'FEEGasDetEnergy',
+             'EBeam',
+             #'DIAG:FEE1:202:241:Data',
+             #'XTCAV_yag_status',
+             #'badname',
+             ]
+
+    for name in names:
+        evrdet = detector_factory(name, env)
+        print name, '-->', type(evrdet)
+
+        for evt in ds.events():
+            print evrdet(evt)
+            break
+
+    return 
+
+if __name__ == '__main__':
+    test2()
+
